committing in case we ever want to try this again although we may have to fork the restx client to do it w/ burnettk
