# spiffworkflow-backend/src/spiffworkflow_backend/api.yml
@@ -139,132 +139,132 @@ paths:
               schema:
                 $ref: "#/components/schemas/OkTrue"
 
-  /process-groups:
-    parameters:
-      - name: process_group_identifier
-        in: query
-        required: false
-        description: Optional parameter to filter by a single group
-        schema:
-          type: string
-      - name: page
-        in: query
-        required: false
-        description: The page number to return. Defaults to page 1.
-        schema:
-          type: integer
-      - name: per_page
-        in: query
-        required: false
-        description: The number of groups to show per page. Defaults to page 10.
-        schema:
-          type: integer
-    get:
-      operationId: spiffworkflow_backend.routes.process_api_blueprint.process_group_list
-      summary: get list
-      tags:
-        - Process Groups
-      responses:
-        "200":
-          description: An array of process groups
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/ProcessModelCategory"
-    post:
-      operationId: spiffworkflow_backend.routes.process_api_blueprint.process_group_create
-      summary: Add process group
-      tags:
-        - Process Groups
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/ProcessModelCategory"
-      responses:
-        "201":
-          description: Processs Group
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ProcessModelCategory"
-
-  /process-groups/{modified_process_group_id}:
-    parameters:
-      - name: modified_process_group_id
-        in: path
-        required: true
-        description: The unique id of an existing process group.
-        schema:
-          type: string
-    # process_group_show
-    get:
-      operationId: spiffworkflow_backend.routes.process_api_blueprint.process_group_show
-      summary: Returns a single process group
-      tags:
-        - Process Groups
-      responses:
-        "200":
-          description: Processs Group.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ProcessModelCategory"
-    delete:
-      operationId: spiffworkflow_backend.routes.process_api_blueprint.process_group_delete
-      summary: Deletes a single process group
-      tags:
-        - Process Groups
-      responses:
-        "200":
-          description: The process group was deleted.
-    put:
-      operationId: spiffworkflow_backend.routes.process_api_blueprint.process_group_update
-      summary: Updates a single process group
-      tags:
-        - Process Groups
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/ProcessModelCategory"
-      responses:
-        "200":
-          description: Process group updated successfully
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ProcessModelCategory"
-
-  /process-groups/{modified_process_group_identifier}/move:
-    parameters:
-      - name: modified_process_group_identifier
-        in: path
-        required: true
-        description: The unique id of an existing process group.
-        schema:
-          type: string
-      - name: new_location
-        in: query
-        required: true
-        description: the new location, as an existing process group id
-        schema:
-          type: string
-    put:
-      operationId: spiffworkflow_backend.routes.process_api_blueprint.process_group_move
-      summary: returns the new group
-      tags:
-        - Process Groups
-      responses:
-        "200":
-          description: Process Group
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ProcessModelCategory"
-
+  # /process-groups:
+  #   parameters:
+  #     - name: process_group_identifier
+  #       in: query
+  #       required: false
+  #       description: Optional parameter to filter by a single group
+  #       schema:
+  #         type: string
+  #     - name: page
+  #       in: query
+  #       required: false
+  #       description: The page number to return. Defaults to page 1.
+  #       schema:
+  #         type: integer
+  #     - name: per_page
+  #       in: query
+  #       required: false
+  #       description: The number of groups to show per page. Defaults to page 10.
+  #       schema:
+  #         type: integer
+  #   get:
+  #     operationId: spiffworkflow_backend.routes.process_api_blueprint.process_group_list
+  #     summary: get list
+  #     tags:
+  #       - Process Groups
+  #     responses:
+  #       "200":
+  #         description: An array of process groups
+  #         content:
+  #           application/json:
+  #             schema:
+  #               type: array
+  #               items:
+  #                 $ref: "#/components/schemas/ProcessModelCategory"
+  #   post:
+  #     operationId: spiffworkflow_backend.routes.process_api_blueprint.process_group_create
+  #     summary: Add process group
+  #     tags:
+  #       - Process Groups
+  #     requestBody:
+  #       content:
+  #         application/json:
+  #           schema:
+  #             $ref: "#/components/schemas/ProcessModelCategory"
+  #     responses:
+  #       "201":
+  #         description: Processs Group
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/ProcessModelCategory"
+  #
+  # /process-groups/{modified_process_group_id}:
+  #   parameters:
+  #     - name: modified_process_group_id
+  #       in: path
+  #       required: true
+  #       description: The unique id of an existing process group.
+  #       schema:
+  #         type: string
+  #   # process_group_show
+  #   get:
+  #     operationId: spiffworkflow_backend.routes.process_api_blueprint.process_group_show
+  #     summary: Returns a single process group
+  #     tags:
+  #       - Process Groups
+  #     responses:
+  #       "200":
+  #         description: Processs Group.
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/ProcessModelCategory"
+  #   delete:
+  #     operationId: spiffworkflow_backend.routes.process_api_blueprint.process_group_delete
+  #     summary: Deletes a single process group
+  #     tags:
+  #       - Process Groups
+  #     responses:
+  #       "200":
+  #         description: The process group was deleted.
+  #   put:
+  #     operationId: spiffworkflow_backend.routes.process_api_blueprint.process_group_update
+  #     summary: Updates a single process group
+  #     tags:
+  #       - Process Groups
+  #     requestBody:
+  #       content:
+  #         application/json:
+  #           schema:
+  #             $ref: "#/components/schemas/ProcessModelCategory"
+  #     responses:
+  #       "200":
+  #         description: Process group updated successfully
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/ProcessModelCategory"
+  #
+  # /process-groups/{modified_process_group_identifier}/move:
+  #   parameters:
+  #     - name: modified_process_group_identifier
+  #       in: path
+  #       required: true
+  #       description: The unique id of an existing process group.
+  #       schema:
+  #         type: string
+  #     - name: new_location
+  #       in: query
+  #       required: true
+  #       description: the new location, as an existing process group id
+  #       schema:
+  #         type: string
+  #   put:
+  #     operationId: spiffworkflow_backend.routes.process_api_blueprint.process_group_move
+  #     summary: returns the new group
+  #     tags:
+  #       - Process Groups
+  #     responses:
+  #       "200":
+  #         description: Process Group
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/ProcessModelCategory"
+  #
   /process-models:
     parameters:
       - name: process_group_identifier
